<resources>
    <string name="app_name">뭐?!과제떴다고?</string>
    <string name="설정">설정</string>
    <string name="학번">학번</string>
    <string name="비밀번호">비밀번호</string>
    <string name="자동로그인">자동 로그인</string>
    <string name="로그인">로그인</string>
    <string name="자동로그인을선택하지않으셨습니다">자동로그인을 선택하지 않으셨습니다.</string>
    <string name="과목검색">과목 검색</string>
    <string name="검색">검색</string>
    <string name="아이디">아이디</string>
    <string name="제목">제목</string>
    <string name="내용">내용</string>
    <string name="과목명">과목명</string>
    <string name="링크">링크</string>
    <string name="날짜">날짜</string>
    <string name="설정항목">설정 항목</string>
    <string name="월">월</string>
    <string name="화">화</string>
    <string name="수">수</string>
    <string name="목">목</string>
    <string name="금">금</string>
    <string name="시험시간표">시험 시간표</string>
    <string name="공지사항">공지사항</string>
    <string name="내정보">내 정보</string>
    <string name="개발자">개발자</string>
    <string name="이훈석">이훈석</string>
    <string name="박승재">박승재</string>
    <string name="이민규">이민규</string>
    <string name="전체알람">               전체알람</string>
    <string name="과제알람">               과제알람</string>
    <string name="푸시알림">알림설정</string>
    <string name="LMS">LMS</string>
    <string name="주차별세부내용">주차별 세부 목록</string>
    <string name = "컨텐트">내용</string>
    <string name = "학년">학년</string>
    <string name = "학과">학과</string>
    <string name = "학년입력">학년입력</string>
    <string name = "학과입력">학과입력</string>
    <string name = "이름">이름</string>
</resources>
