<?xml version="1.0" encoding="utf-8"?>
<!--시험시간표에 대한 그리드뷰 제공을 위해 요일부분을 테이블 레이아웃으로 작성-->
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:stretchColumns="*">
    <TableRow android:layout_height="wrap_content">
        <TextView
            android:background="#FFFFFF"

            android:id="@+id/date_text"
            android:textStyle="bold"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="100dp"
            android:text="@string/날짜" />
        <TextView
            android:id="@+id/mon_text"
            android:textSize="11dp"
            android:background="#FFFFFF"
            android:layout_height="100dp"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:text="@string/월" />
        <TextView
            android:id="@+id/tue_text"
            android:textSize="11dp"
            android:background="#FFFFFF"
            android:layout_height="100dp"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:text="@string/화" />

        <TextView
            android:id="@+id/wed_text"
            android:textSize="11dp"
            android:background="#FFFFFF"
            android:layout_height="100dp"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:text="@string/수" />

        <TextView
            android:id="@+id/thu_text"
            android:textSize="11dp"
            android:background="#FFFFFF"
            android:layout_height="100dp"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:text="@string/목" />

        <TextView
            android:id="@+id/fri_text"
            android:textSize="11dp"
            android:background="#FFFFFF"
            android:layout_height="100dp"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:text="@string/금" />
    </TableRow>


</TableLayout>