<?xml version="1.0" encoding="utf-8"?>
<!-- 설정프래그먼트중 하나로써 앱 개발자들의 정보를 나타내는 레이아웃
-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/dev"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginTop="52dp"
        android:text="@string/개발자"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        app:cardCornerRadius="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dev">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical">
            <com.makeramen.roundedimageview.RoundedImageView
                android:id = "@+id/customimage"
                android:layout_width = "match_parent"
                android:layout_height ="0dp"
                android:layout_weight = "0.3"
                android:scaleType="centerCrop"
                app:riv_corner_radius_top_left="15dp"
                app:riv_corner_radius_top_right="15dp"
                android:src="@drawable/de"
                app:riv_border_color="#333333"
                app:riv_mutate_background="true"
                app:riv_oval="false"

                />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="380dp"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:id = "@+id/con1">

            <TextView
                android:id="@+id/dev1"
                android:layout_width="101dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="8dp"
                android:text="@string/이훈석"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dev3" />

            <TextView
                android:id="@+id/dev2"
                android:layout_width="101dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30sp"
                android:layout_marginTop="40dp"
                android:text="@string/박승재"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/dev3"
                android:layout_width="101dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="8sp"
                android:text="@string/이민규"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dev2" />

            <TextView
                android:id="@+id/info1"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="80sp"

                android:text="소프트웨어    15학번"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/info2"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="8sp"
                android:layout_marginRight="80sp"
                android:text="소프트웨어    15학번"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info1" />

            <TextView
                android:id="@+id/info3"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="8sp"
                android:layout_marginRight="80sp"
                android:text="소프트웨어    15학번"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="KOREA AEROSPACE UNIV."
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card1" />

</androidx.constraintlayout.widget.ConstraintLayout>